# InvestmentIQ

./: .env.example  .gitignore  .mailmap  ARCHITECTURE_DECISIONS.md  COMPLETE_SYSTEM_GUIDE.md  DATA_REQUIREMENTS.md  FMP_INTEGRATION_PLAN.md  FMP_INTEGRATION_STATUS.md  LANGSMITH_INTEGRATION.md  MIGRATE_README.md  MURTHY-CHG-LOG-2025-10-07.md  README.md  README_ADK.md  SUBMISSION_SUMMARY.md  SYSTEM_OVERVIEW.md  TEAM_UPDATE_v2.1.md  cli_interactive.py  main.py  pyproject.toml  requirements.txt  run.py  seed_rag_context.py  setup_venv.sh  test_advanced_setup.py  test_market_fmp.py
agents/: __init__.py  adk_context_engine.py  adk_financial_analyst.py  adk_market_intelligence.py  adk_orchestrator.py  adk_qualitative_signal.py  base_agent.py  context_engine.py  financial_analyst.py  market_intelligence.py  qualitative_signal.py  strategic_orchestrator.py
apps/: dashboard.py
backup_manual/: strategic_orchestrator_old_manual.py  test_hf_integration.py  test_langgraph.py  verify_hf.py
backup_manual/unused_scripts/: confidence.py  context_engine.py  financial_analyst.py  main_enhanced.py  pattern_miner.py  qualitative_signal.py  run_evaluation.py
config/: __init__.py  settings.py
core/: __init__.py  agent_bus.py  agent_contracts.py  investment_graph.py  resilience.py  signal_fusion.py
data/mock/: COMPANY_X_financial.json  COMPANY_X_qualitative.txt  context_rules.json
evaluation/: __init__.py  dataset_creator.py  evaluators.py
reference/agents/: financial_analyst.py  qualitative_signal.py  workforce_intelligence.py
reference/apps/: dashboard.py
reference/tools/: edgar_tool.py  finnhub_tool.py  news_api_tool.py
reference/utils/: observability.py
tests/: EVALUATION_REPORT.md  __init__.py  eval_dataset.json  eval_results.json  evaluate_agents.py  test_adk_orchestrator.py  test_agents.py  test_results_.json  test_results_AAPL.json  test_results_AMZN.json  test_results_BA.json  test_results_MSFT.json  test_results_TSLA.json  test_summary.md
tools/: __init__.py  data_tools.py  fmp_tool.py  news_api_tool.py  rag_context_tool.py
utils/: __init__.py  add_tracing.py  hf_client.py  langsmith_tracer.py  llm_factory.py  logger.py  ui_components.py
